y.output

state 0
	$accept: .main $end 
	main: .    (1)

	create  shift 3
	.  reduce 1 (src line 120)

	stmt  goto 2
	main  goto 1

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  stmt.    (2)
	main:  stmt.';' 

	';'  shift 4
	.  reduce 2 (src line 122)


state 3
	stmt:  create.externalStmt table ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt partitionStmt distributedStmt propertiesStmt 
	externalStmt: .    (5)

	external  shift 6
	.  reduce 5 (src line 132)

	externalStmt  goto 5

state 4
	main:  stmt ';'.    (3)

	.  reduce 3 (src line 124)


state 5
	stmt:  create externalStmt.table ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt partitionStmt distributedStmt propertiesStmt 

	table  shift 7
	.  error


state 6
	externalStmt:  external.    (6)

	.  reduce 6 (src line 134)


state 7
	stmt:  create externalStmt table.ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt partitionStmt distributedStmt propertiesStmt 
	ifNotExistsStmt: .    (7)

	ifWord  shift 9
	.  reduce 7 (src line 138)

	ifNotExistsStmt  goto 8

state 8
	stmt:  create externalStmt table ifNotExistsStmt.tableNameStmt columnListStmt primaryKeyStmt partitionStmt distributedStmt propertiesStmt 

	identifier  shift 11
	.  error

	tableNameStmt  goto 10

state 9
	ifNotExistsStmt:  ifWord.not exists 

	not  shift 12
	.  error


state 10
	stmt:  create externalStmt table ifNotExistsStmt tableNameStmt.columnListStmt primaryKeyStmt partitionStmt distributedStmt propertiesStmt 
	columnListStmt: .    (11)

	'('  shift 14
	.  reduce 11 (src line 155)

	columnListStmt  goto 13

state 11
	tableNameStmt:  identifier.    (9)
	tableNameStmt:  identifier.'.' identifier 

	'.'  shift 15
	.  reduce 9 (src line 144)


state 12
	ifNotExistsStmt:  ifWord not.exists 

	exists  shift 16
	.  error


state 13
	stmt:  create externalStmt table ifNotExistsStmt tableNameStmt columnListStmt.primaryKeyStmt partitionStmt distributedStmt propertiesStmt 
	primaryKeyStmt: .    (31)

	primaryWord  shift 18
	.  reduce 31 (src line 207)

	primaryKeyStmt  goto 17

state 14
	columnListStmt:  '('.columnFieldListStmt ')' 
	columnFieldListStmt: .    (13)

	identifier  shift 21
	.  reduce 13 (src line 160)

	columnFieldListStmt  goto 19
	columnStmt  goto 20

state 15
	tableNameStmt:  identifier '.'.identifier 

	identifier  shift 22
	.  error


state 16
	ifNotExistsStmt:  ifWord not exists.    (8)

	.  reduce 8 (src line 140)


state 17
	stmt:  create externalStmt table ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt.partitionStmt distributedStmt propertiesStmt 
	partitionStmt: .    (36)

	partitionWord  shift 24
	.  reduce 36 (src line 232)

	partitionStmt  goto 23

state 18
	primaryKeyStmt:  primaryWord.keyWord '(' primaryKeyColumnListStmt ')' 

	keyWord  shift 25
	.  error


state 19
	columnListStmt:  '(' columnFieldListStmt.')' 
	columnFieldListStmt:  columnFieldListStmt.',' columnStmt 

	')'  shift 26
	','  shift 27
	.  error


state 20
	columnFieldListStmt:  columnStmt.    (14)

	.  reduce 14 (src line 162)


state 21
	columnStmt:  identifier.colTypeStmt aggTypeStmt notNullStmt defaultStmt 
	colTypeStmt: .    (17)

	tinyintType  shift 29
	intType  shift 30
	bigintType  shift 31
	dateType  shift 32
	stringType  shift 33
	.  reduce 17 (src line 175)

	colTypeStmt  goto 28

state 22
	tableNameStmt:  identifier '.' identifier.    (10)

	.  reduce 10 (src line 148)


state 23
	stmt:  create externalStmt table ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt partitionStmt.distributedStmt propertiesStmt 
	distributedStmt: .    (48)

	distributedWord  shift 35
	.  reduce 48 (src line 281)

	distributedStmt  goto 34

state 24
	partitionStmt:  partitionWord.byWord rangeWord '(' identifier ')' '(' partitionRangeStmt ')' 

	byWord  shift 36
	.  error


state 25
	primaryKeyStmt:  primaryWord keyWord.'(' primaryKeyColumnListStmt ')' 

	'('  shift 37
	.  error


state 26
	columnListStmt:  '(' columnFieldListStmt ')'.    (12)

	.  reduce 12 (src line 157)


state 27
	columnFieldListStmt:  columnFieldListStmt ','.columnStmt 

	identifier  shift 21
	.  error

	columnStmt  goto 38

state 28
	columnStmt:  identifier colTypeStmt.aggTypeStmt notNullStmt defaultStmt 
	aggTypeStmt: .    (23)

	sum  shift 40
	max  shift 41
	.  reduce 23 (src line 188)

	aggTypeStmt  goto 39

state 29
	colTypeStmt:  tinyintType.    (18)

	.  reduce 18 (src line 177)


state 30
	colTypeStmt:  intType.    (19)

	.  reduce 19 (src line 179)


state 31
	colTypeStmt:  bigintType.    (20)

	.  reduce 20 (src line 181)


state 32
	colTypeStmt:  dateType.    (21)

	.  reduce 21 (src line 183)


state 33
	colTypeStmt:  stringType.    (22)

	.  reduce 22 (src line 185)


state 34
	stmt:  create externalStmt table ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt partitionStmt distributedStmt.propertiesStmt 
	propertiesStmt: .    (50)

	propertiesWord  shift 43
	.  reduce 50 (src line 289)

	propertiesStmt  goto 42

state 35
	distributedStmt:  distributedWord.byWord hashWord '(' identifier ')' bucketsWord number 

	byWord  shift 44
	.  error


state 36
	partitionStmt:  partitionWord byWord.rangeWord '(' identifier ')' '(' partitionRangeStmt ')' 

	rangeWord  shift 45
	.  error


state 37
	primaryKeyStmt:  primaryWord keyWord '('.primaryKeyColumnListStmt ')' 
	primaryKeyColumnListStmt: .    (33)

	identifier  shift 47
	.  reduce 33 (src line 212)

	primaryKeyColumnListStmt  goto 46

state 38
	columnFieldListStmt:  columnFieldListStmt ',' columnStmt.    (15)

	.  reduce 15 (src line 164)


state 39
	columnStmt:  identifier colTypeStmt aggTypeStmt.notNullStmt defaultStmt 
	notNullStmt: .    (26)

	not  shift 50
	null  shift 49
	.  reduce 26 (src line 195)

	notNullStmt  goto 48

state 40
	aggTypeStmt:  sum.    (24)

	.  reduce 24 (src line 190)


state 41
	aggTypeStmt:  max.    (25)

	.  reduce 25 (src line 192)


state 42
	stmt:  create externalStmt table ifNotExistsStmt tableNameStmt columnListStmt primaryKeyStmt partitionStmt distributedStmt propertiesStmt.    (4)

	.  reduce 4 (src line 128)


state 43
	propertiesStmt:  propertiesWord.'(' keyValueListStmt ')' 

	'('  shift 51
	.  error


state 44
	distributedStmt:  distributedWord byWord.hashWord '(' identifier ')' bucketsWord number 

	hashWord  shift 52
	.  error


state 45
	partitionStmt:  partitionWord byWord rangeWord.'(' identifier ')' '(' partitionRangeStmt ')' 

	'('  shift 53
	.  error


state 46
	primaryKeyStmt:  primaryWord keyWord '(' primaryKeyColumnListStmt.')' 
	primaryKeyColumnListStmt:  primaryKeyColumnListStmt.',' identifier 

	')'  shift 54
	','  shift 55
	.  error


state 47
	primaryKeyColumnListStmt:  identifier.    (34)

	.  reduce 34 (src line 214)


state 48
	columnStmt:  identifier colTypeStmt aggTypeStmt notNullStmt.defaultStmt 
	defaultStmt: .    (29)

	defaultWord  shift 57
	.  reduce 29 (src line 202)

	defaultStmt  goto 56

state 49
	notNullStmt:  null.    (27)

	.  reduce 27 (src line 197)


state 50
	notNullStmt:  not.null 

	null  shift 58
	.  error


 51: reduce/reduce conflict  (red'ns 52 and 55) on ')'
 51: reduce/reduce conflict  (red'ns 52 and 55) on ','
state 51
	propertiesStmt:  propertiesWord '('.keyValueListStmt ')' 
	keyValueListStmt: .    (52)
	keyValueStmt: .    (55)

	identifier  shift 61
	.  reduce 52 (src line 295)

	keyValueListStmt  goto 59
	keyValueStmt  goto 60

state 52
	distributedStmt:  distributedWord byWord hashWord.'(' identifier ')' bucketsWord number 

	'('  shift 62
	.  error


state 53
	partitionStmt:  partitionWord byWord rangeWord '('.identifier ')' '(' partitionRangeStmt ')' 

	identifier  shift 63
	.  error


state 54
	primaryKeyStmt:  primaryWord keyWord '(' primaryKeyColumnListStmt ')'.    (32)

	.  reduce 32 (src line 209)


state 55
	primaryKeyColumnListStmt:  primaryKeyColumnListStmt ','.identifier 

	identifier  shift 64
	.  error


state 56
	columnStmt:  identifier colTypeStmt aggTypeStmt notNullStmt defaultStmt.    (16)

	.  reduce 16 (src line 167)


state 57
	defaultStmt:  defaultWord.'\"' identifier '\"' 

	'"'  shift 65
	.  error


state 58
	notNullStmt:  not null.    (28)

	.  reduce 28 (src line 199)


state 59
	propertiesStmt:  propertiesWord '(' keyValueListStmt.')' 
	keyValueListStmt:  keyValueListStmt.',' keyValueStmt 

	')'  shift 66
	','  shift 67
	.  error


state 60
	keyValueListStmt:  keyValueStmt.    (53)

	.  reduce 53 (src line 297)


state 61
	keyValueStmt:  identifier.'=' identifier 

	'='  shift 68
	.  error


state 62
	distributedStmt:  distributedWord byWord hashWord '('.identifier ')' bucketsWord number 

	identifier  shift 69
	.  error


state 63
	partitionStmt:  partitionWord byWord rangeWord '(' identifier.')' '(' partitionRangeStmt ')' 

	')'  shift 70
	.  error


state 64
	primaryKeyColumnListStmt:  primaryKeyColumnListStmt ',' identifier.    (35)

	.  reduce 35 (src line 223)


state 65
	defaultStmt:  defaultWord '\"'.identifier '\"' 

	identifier  shift 71
	.  error


state 66
	propertiesStmt:  propertiesWord '(' keyValueListStmt ')'.    (51)

	.  reduce 51 (src line 291)


state 67
	keyValueListStmt:  keyValueListStmt ','.keyValueStmt 
	keyValueStmt: .    (55)

	identifier  shift 61
	.  reduce 55 (src line 302)

	keyValueStmt  goto 72

state 68
	keyValueStmt:  identifier '='.identifier 

	identifier  shift 73
	.  error


state 69
	distributedStmt:  distributedWord byWord hashWord '(' identifier.')' bucketsWord number 

	')'  shift 74
	.  error


state 70
	partitionStmt:  partitionWord byWord rangeWord '(' identifier ')'.'(' partitionRangeStmt ')' 

	'('  shift 75
	.  error


state 71
	defaultStmt:  defaultWord '\"' identifier.'\"' 

	'"'  shift 76
	.  error


state 72
	keyValueListStmt:  keyValueListStmt ',' keyValueStmt.    (54)

	.  reduce 54 (src line 299)


state 73
	keyValueStmt:  identifier '=' identifier.    (56)

	.  reduce 56 (src line 304)


state 74
	distributedStmt:  distributedWord byWord hashWord '(' identifier ')'.bucketsWord number 

	bucketsWord  shift 77
	.  error


 75: reduce/reduce conflict  (red'ns 38 and 41) on ')'
 75: reduce/reduce conflict  (red'ns 38 and 41) on ','
state 75
	partitionStmt:  partitionWord byWord rangeWord '(' identifier ')' '('.partitionRangeStmt ')' 
	partitionRangeStmt: .    (38)
	partitonRangeListStmt: .    (41)

	partitionWord  shift 80
	.  reduce 38 (src line 240)

	partitionRangeStmt  goto 78
	partitonRangeListStmt  goto 79

state 76
	defaultStmt:  defaultWord '\"' identifier '\"'.    (30)

	.  reduce 30 (src line 204)


state 77
	distributedStmt:  distributedWord byWord hashWord '(' identifier ')' bucketsWord.number 

	number  shift 81
	.  error


state 78
	partitionStmt:  partitionWord byWord rangeWord '(' identifier ')' '(' partitionRangeStmt.')' 
	partitionRangeStmt:  partitionRangeStmt.',' partitonRangeListStmt 

	')'  shift 82
	','  shift 83
	.  error


state 79
	partitionRangeStmt:  partitonRangeListStmt.    (39)

	.  reduce 39 (src line 242)


state 80
	partitonRangeListStmt:  partitionWord.identifier valuesWord '[' partitionValueStmt ')' 

	identifier  shift 84
	.  error


state 81
	distributedStmt:  distributedWord byWord hashWord '(' identifier ')' bucketsWord number.    (49)

	.  reduce 49 (src line 283)


state 82
	partitionStmt:  partitionWord byWord rangeWord '(' identifier ')' '(' partitionRangeStmt ')'.    (37)

	.  reduce 37 (src line 234)


state 83
	partitionRangeStmt:  partitionRangeStmt ','.partitonRangeListStmt 
	partitonRangeListStmt: .    (41)

	partitionWord  shift 80
	.  reduce 41 (src line 247)

	partitonRangeListStmt  goto 85

state 84
	partitonRangeListStmt:  partitionWord identifier.valuesWord '[' partitionValueStmt ')' 

	valuesWord  shift 86
	.  error


state 85
	partitionRangeStmt:  partitionRangeStmt ',' partitonRangeListStmt.    (40)

	.  reduce 40 (src line 244)


state 86
	partitonRangeListStmt:  partitionWord identifier valuesWord.'[' partitionValueStmt ')' 

	'['  shift 87
	.  error


 87: reduce/reduce conflict  (red'ns 43 and 46) on ')'
 87: reduce/reduce conflict  (red'ns 43 and 46) on ','
state 87
	partitonRangeListStmt:  partitionWord identifier valuesWord '['.partitionValueStmt ')' 
	partitionValueStmt: .    (43)
	strStmt: .    (46)

	'('  shift 90
	.  reduce 43 (src line 262)

	strStmt  goto 89
	partitionValueStmt  goto 88

state 88
	partitonRangeListStmt:  partitionWord identifier valuesWord '[' partitionValueStmt.')' 
	partitionValueStmt:  partitionValueStmt.',' strStmt 

	')'  shift 91
	','  shift 92
	.  error


state 89
	partitionValueStmt:  strStmt.    (44)

	.  reduce 44 (src line 264)


state 90
	strStmt:  '('.identifier ')' 

	identifier  shift 93
	.  error


state 91
	partitonRangeListStmt:  partitionWord identifier valuesWord '[' partitionValueStmt ')'.    (42)

	.  reduce 42 (src line 249)


state 92
	partitionValueStmt:  partitionValueStmt ','.strStmt 
	strStmt: .    (46)

	'('  shift 90
	.  reduce 46 (src line 276)

	strStmt  goto 94

state 93
	strStmt:  '(' identifier.')' 

	')'  shift 95
	.  error


state 94
	partitionValueStmt:  partitionValueStmt ',' strStmt.    (45)

	.  reduce 45 (src line 270)


state 95
	strStmt:  '(' identifier ')'.    (47)

	.  reduce 47 (src line 278)


54 terminals, 24 nonterminals
57 grammar rules, 96/16000 states
0 shift/reduce, 6 reduce/reduce conflicts reported
73 working sets used
memory: parser 29/240000
0 extra closures
72 shift entries, 1 exceptions
27 goto entries
0 entries saved by goto default
Optimizer space used: output 95/240000
95 table entries, 0 zero
maximum spread: 54, maximum offset: 92
